Fixed wasted instance creation