@@ -300,10 +300,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + (numBuildValues));
+				contained = Long.valueOf(contained.longValue() + (numBuildValues));
 			}
 			
 			map.put(key, contained);
@@ -407,10 +407,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -520,10 +520,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -900,10 +900,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + (numBuildValues));
+				contained = Long.valueOf(contained.longValue() + (numBuildValues));
 			}
 			
 			map.put(key, contained);
@@ -1010,10 +1010,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
@@ -1122,10 +1122,10 @@ public class HashTableITCase {
 			
 			Long contained = map.get(key);
 			if (contained == null) {
-				contained = new Long(numBuildValues);
+				contained = Long.valueOf(numBuildValues);
 			}
 			else {
-				contained = new Long(contained.longValue() + numBuildValues);
+				contained = Long.valueOf(contained.longValue() + numBuildValues);
 			}
 			
 			map.put(key, contained);
