@@ -53,7 +53,7 @@ public class LocalExecutorITCase {
 			executor.setTaskManagerNumSlots(DOP);
 			executor.start();
 			
-			executor.executePlan(wc.getPlan(new Integer(DOP).toString(), inFile.toURI().toString(),
+			executor.executePlan(wc.getPlan(Integer.valueOf(DOP).toString(), inFile.toURI().toString(),
 					outFile.toURI().toString()));
 			executor.stop();
 		} catch (Exception e) {
