@@ -91,7 +91,7 @@ public class GlobalSortingMixedOrderITCase extends RecordAPITestBase {
 	@Override
 	protected Plan getTestJob() {
 		GlobalSort globalSort = new GlobalSort();
-		return globalSort.getPlan(new Integer(DOP).toString(), recordsPath, resultPath);
+		return globalSort.getPlan(Integer.valueOf(DOP).toString(), recordsPath, resultPath);
 	}
 
 	@Override
