@@ -362,7 +362,7 @@ public class TPCHQuery9ITCase extends RecordAPITestBase {
 	protected Plan getTestJob() {
 		TPCHQuery9 tpch9 = new TPCHQuery9();
 		return tpch9.getPlan(
-				new Integer(DOP).toString(),
+				Integer.valueOf(DOP).toString(),
 				partInputPath,
 				partSuppInputPath,
 				ordersInputPath,
